# heart-spark-ai

./: .dockerignore  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
app/api/run-proxy/[...path]/: route.ts
app/chat-test/: page.tsx
apps/web/: next.config.ts  package.json
apps/web/api/: _probe-root.js
apps/web/app/: layout.tsx  page.tsx
apps/web/app/api-test/: page.tsx
apps/web/app/api/_probe/: route.ts
apps/web/app/api/ok/: route.ts
apps/web/app/chat-test/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/hello/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/signup/: page.tsx
apps/web/components/: useMe.ts
apps/web/lib/: api.ts
apps/web/pages/api/: ping.ts
apps/web/src/lib/: api.ts
apps/web__parked_1757294420/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
apps/web__parked_1757294420/components/: Nav.tsx
apps/web__parked_1757294420/lib/: auth.ts
apps/web__parked_1757294420/src/components/: Nav.tsx  useMe.ts
infra/gateway/: openapi.iso.yaml  openapi.yaml
services/api/: .dockerignore  Dockerfile  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: e8fad9720521_init_schema.py
services/api/app/: db.py  main.py  models.py  moderation.py  realtime.py  routes_auth.py  routes_ws.py  schemas.py  security.py
src/app/: layout.tsx  page.tsx
src/app/api/_probe/: route.ts
src/app/api/debug-proxy/: route.ts
src/app/api/ok/: route.ts
src/app/api/ping/: route.ts
(+13 files in other folders)
